bot and services changed

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -23,7 +23,7 @@
             <option class="opt" value="1" selected><p th:text="${#authentication.principal.name}"></p></option>
             <option class="logout" value="/logout">Logout</option>
         </select>
-        <img class="nav-icon" src="./images/user3.png" alt="User">
+        <img class="nav-icon" src="../images/user3.png" alt="User">
     </div>
 </nav>
 <div class="wrapper">
