--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -87,11 +87,9 @@
                     <thead>
                     <tr>
                         <th>#</th>
-                        <th>Product name </th>
-                        <th>Username</th>
-                        <th>User state</th>
-                        <th>User permissions</th>
                         <th>Product name</th>
+                        <th>Username</th>
+                        <th>Total price</th>
                         <th>Product price</th>
                         <th>Product amount</th>
                         <th>Created date</th>
@@ -101,10 +99,9 @@
                     <tbody>
                     <tr th:each="order, countOrder : ${response}">
                         <td th:text="${countOrder.count}"></td>
-                        <td th:text="${order.user.name}"></td>
-                        <td th:text="${order.user.username}"></td>
-                        <td th:text="${order.user.userState}"></td>
                         <td th:text="${order.product.name}"></td>
+                        <td th:text="${order.user.username}"></td>
+                        <td th:text="${order.getAmount() * order.product.getPrice()}"></td>
                         <td th:text="${order.product.price}"></td>
                         <td th:text="${order.product.amount}"></td>
                         <td th:text="${#temporals.format(order.createdDate, 'dd MMM yyyy HH:mm:ss')}"></td>
@@ -151,34 +148,8 @@
                                         </div>
                                         <div class="modal-body">
                                             <form th:action="@{/dashboard/orders/update}" method="post">
-                                                <div class="form-group">
-                                                    <label for="editName">Name:</label>
-                                                    <input type="text" class="form-control" name="name" id="editName">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="editUsername">Username:</label>
-                                                    <input type="text" class="form-control" name="username" id="editUsername">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="editPassword">Password:</label>
-                                                    <input type="password" class="form-control" name="password" id="editPassword">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="roles">Roles:</label>
-                                                    <select class="form-control" id="editRoles" name="roles" multiple>
-                                                        <option value="ADMIN">Admin</option>
-                                                        <option value="ACCOUNTANT">Accountant</option>
-                                                    </select>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="permissions">Permissions:</label>
-                                                    <select class="form-control" id="editPermissions" name="permissions" multiple>
-                                                        <option value="ADD">Add</option>
-                                                        <option value="GET">Get</option>
-                                                        <option value="DELETE">Delete</option>
-                                                        <option value="EDIT">Edit</option>
-                                                    </select>
-                                                </div>
+
+
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                                     <button type="submit" class="btn btn-primary">Save</button>
