bot and services changed

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -29,7 +29,7 @@
                 $('#deleteModal #id').val(id);
             });
             $('table .edit').on('click', function (){
-                var id = $(this).parent().find('#editId').val();
+                var id = $(this).parent().find('#editId').val(); //d
                 $('#editModal #editId').val(id);
             });
         });
