--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -36,6 +36,17 @@
     </script>
 </head>
 <body>
+<div th:if="${message != null}">
+    <div id="snackbar" th:text="${message}"></div>
+</div>
+
+<script>
+    var x = document.getElementById("snackbar");
+    x.className = "show";
+    setTimeout(function () {
+        x.className = x.className.replace("show", "");
+    }, 3000);
+</script>
 <input type="checkbox" id="active">
 <label for="active" class="menu-btn"><span></span></label>
 <label for="active" class="close"></label>
@@ -92,8 +103,8 @@
                 </div>
 
 
-                <button type="button" class="btn btn-info add-new" data-toggle="modal" data-target="#addCategory">
-                    <i class="fa fa-plus"></i> Add New
+                <button type="button" class="btn btn-info add-new" style="margin-top: 20px;" data-toggle="modal" data-target="#addCategory">
+                    <i class="fa fa-plus" ></i> Add New
                 </button>
 
                 <!-- Add New Modal -->
@@ -133,8 +144,8 @@
                     <tr>
                         <th>#</th>
                         <th>Type <i class="fa fa-sort"></i></th>
-                        <th>Created Date</th>
                         <th>Created By</th>
+                        <th>Created Date</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
@@ -284,21 +295,22 @@
                     </tbody>
                 </table>
             </div>
-            <div class="clearfix">
-                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-                <ul class="pagination">
-                    <li class="page-item disabled"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
-                    <li class="page-item"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item active"><a href="#" class="page-link">3</a></li>
-                    <li class="page-item"><a href="#" class="page-link">4</a></li>
-                    <li class="page-item"><a href="#" class="page-link">5</a></li>
-                    <li class="page-item"><a href="#" class="page-link"><i class="fa fa-angle-double-right"></i></a>
-                    </li>
-                </ul>
-            </div>
+<!--            <div class="clearfix">-->
+<!--                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>-->
+<!--                <ul class="pagination">-->
+<!--                    <li class="page-item disabled"><a href="#"><i style="margin-top: -15px;" class="fa fa-angle-double-left"></i></a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link">1</a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link">2</a></li>-->
+<!--                    <li class="page-item active"><a href="#" class="page-link">3</a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link">4</a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link">5</a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link"><i style="margin-top: -15px;" class="fa fa-angle-double-right"></i></a>-->
+<!--                    </li>-->
+<!--                </ul>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
+
 </body>
 </html>
