--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -36,6 +36,17 @@
     </script>
 </head>
 <body>
+<div th:if="${message != null}">
+    <div id="snackbar" th:text="${message}"></div>
+</div>
+
+<script>
+    var x = document.getElementById("snackbar");
+    x.className = "show";
+    setTimeout(function () {
+        x.className = x.className.replace("show", "");
+    }, 3000);
+</script>
 <input type="checkbox" id="active">
 <label for="active" class="menu-btn"><span></span></label>
 <label for="active" class="close"></label>
@@ -119,6 +130,30 @@
                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                                         </div>
                                         <div class="modal-body">
+                                            <div style="display: flex; justify-content: space-between;">
+                                                <h4 style="font-weight: bolder; display: inline; float: left;">Date
+                                                    of created :</h4>
+                                                <p style="font-weight: bold; font-style: italic; color: #174ea6; font-size: medium"
+                                                   th:text="${#temporals.format(order.createdDate, 'dd MMM yyyy HH:mm:ss')}"></p>
+                                            </div>
+                                            <div style="display: flex; justify-content: space-between;">
+                                                <h4 style="font-weight: bolder;display: inline; float: left;">Date
+                                                    of update :</h4>
+                                                <p style="font-weight: bold; font-style: italic; color: #174ea6; font-size: medium"
+                                                   th:text="${#temporals.format(order.updatedDate, 'dd MMM yyyy HH:mm:ss')}"></p>
+                                            </div>
+                                            <div style="display: flex; justify-content: space-between;">
+                                                <h4 style="font-weight: bolder; display: inline; float: left;">
+                                                    Employee created by :</h4>
+                                                <p style="font-weight: bold; font-style: italic; color: #174ea6; font-size: medium"
+                                                   th:text="${order.createdBy}"></p>
+                                            </div>
+                                            <div style="display: flex; justify-content: space-between;">
+                                                <h4 style="font-weight: bolder; margin: 0; display: inline; float: left;">
+                                                    Modified by :</h4>
+                                                <p style="font-weight: bold; font-style: italic; color: #174ea6; font-size: medium"
+                                                   th:text="${order.lastModifiedBy}"></p>
+                                            </div>
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -146,10 +181,13 @@
                                             <h5 class="modal-title">Edit Form</h5>
                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                                         </div>
-                                        <div class="modal-body">
-                                            <form th:action="@{/dashboard/orders/update}" method="post">
-
-
+                                        <div class="modal-body" >
+                                            <form style="margin-top: -5px" th:action="@{/dashboard/orders/update}" method="post">
+                                                <input type="hidden" th:value="${order.id}" name="id">
+                                                <select class="get-order-select" name="status">
+                                                    <option class="get-order-option">SHIPPING</option>
+                                                    <option class="get-order-option">DELIVERED</option>
+                                                </select>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                                     <button type="submit" class="btn btn-primary">Save</button>
@@ -221,18 +259,18 @@
                     </tbody>
                 </table>
             </div>
-            <div class="clearfix">
-                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-                <ul class="pagination">
-                    <li class="page-item disabled"><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
-                    <li class="page-item"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item active"><a href="#" class="page-link">3</a></li>
-                    <li class="page-item"><a href="#" class="page-link">4</a></li>
-                    <li class="page-item"><a href="#" class="page-link">5</a></li>
-                    <li class="page-item"><a href="#" class="page-link"><i class="fa fa-angle-double-right"></i></a></li>
-                </ul>
-            </div>
+<!--            <div class="clearfix">-->
+<!--                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>-->
+<!--                <ul class="pagination">-->
+<!--                    <li class="page-item disabled"><a href="#"><i style="margin-top: -15px;" class="fa fa-angle-double-left"></i></a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link">1</a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link">2</a></li>-->
+<!--                    <li class="page-item active"><a href="#" class="page-link">3</a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link">4</a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link">5</a></li>-->
+<!--                    <li class="page-item"><a href="#" class="page-link"><i style="margin-top: -15px;" class="fa fa-angle-double-right"></i></a></li>-->
+<!--                </ul>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
